# linux_openpvrsgx

./: .gitignore  .travis.yml  MAINTAINERS  pyra_vol.c
Documentation/devicetree/bindings/: trivial-devices.txt  vendor-prefixes.yaml
Documents/: RELNOTES.txt
F14/: emgd-bin-3398-1.18.i586.rpm  emgd-devel-3398-1.18.i586.rpm  emgd-gui-3398-1.18.i586.rpm
F14/Utilities/: emgd_crg  emgdgui
GTA04/: README
GTA04/boot/: bootargs.txt
GTA04/root/: batt  bl  boe-w677l  boe-w677l.prog  camera-demo  charger  debugdsi  dial  femtocom.c  fm-demo  gps-demo  hw-test  ledtest  lsHSO  mipi-test  panelselect  pin  si4721.c  sound-demo  ssd2858  success-s90451  tam  tvout  twl4030  twl6040  vibra.py  video-demo  wlan  wwan  wwan-off  wwan-on  wwan-status  wwan.conf
Letux/: featurelist.tsv  featurelist.txt
Letux/Debian/: .gitmodules  README.md  defconfig  install_devel_files.sh  kdiff-to-kconfig.sh  kernel-cubox-i.spec  kernel.spec
Letux/Debian/debian/: README.Debian  README.source  changelog  control  copyright  kernel-3.14.y-fslc-imx6-sr.postinst  kernel-3.14.y-fslc-imx6-sr.prerm  linux-image-NAME.postinst  linux-image-NAME.prerm  linux-image-letux.postinst  linux-image-letux.prerm  rules
Letux/boot/: bootargs.txt
Letux/etc/: fw_env.config  powervr.ini
Letux/etc/X11/: 2.8-640x480.conf  3.0-800x480.conf  3.7-640x480.conf  4.3-272x480.conf  4.3-480x640.conf  5.0-1080x1920.conf  5.0-720x1280.conf  5.8-1072x1448-epd.conf  7.0-480x800.conf  (+9 more)
Letux/root/: audio-demo  b_host.sh  batt  bl  blanviewd.c  ble-scan  boe-w677l  boe-w677l.prog  bt-scan  build-aess-fw  camera-demo  camera-setup  capture-demo  capture-mem2mem.c  capture.c  charger  checkbaud  config-pin  cpu-speed  cpuspeed  debug  dial  diskspeed  edid  fbpng.c  fbtest  femtocom.c  findgpiochip  findhwmon  findiio  findinput  findregulator  findsoundcard  findthermal  fix-ca-certificates  flash-nand  fm-demo  gps-demo  gps-on  gpu-demo  (+57 more)
Letux/scripts/: configure-lpae  debug  merge  mergefile  rebase  statistics
MeeGo1.2/: emgd-bin-3398-1.18.i586.rpm  emgd-devel-3398-1.18.i586.rpm  emgd-gui-3398-1.18.i586.rpm
MeeGo_Wayland/: emgd-bin-3398-1.18.i586.rpm  emgd-devel-3398-1.18.i586.rpm  emgd-gui-3398-1.18.i586.rpm
Tizen1.0/: emgd-bin-3398-1.16.i586.rpm  emgd-devel-3398-1.16.i586.rpm  emgd-gui-3398-1.16.i586.rpm
Utilities/: CED-Lite.tgz
Utilities/CED-Lite/: index.html
Utilities/rpmbuild/: README.txt  emgd-kmod.spec  emgd.spec
arch/mips/: Kbuild.platforms  Kconfig
crypto/asymmetric_keys/: Kconfig
drivers/bluetooth/: btrtl.c  btrtl.h  hci_h4.c  hci_h5.c
drivers/bus/: ti-sysc.c
drivers/clocksource/: ingenic-timer.c
drivers/cpuidle/: Kconfig.mips  Makefile  cpuidle-jz4780.c
drivers/dma/: dma-jz4780.c
drivers/extcon/: extcon-gpio.c
drivers/gnss/: Kconfig  Makefile  w2sg0004.c
drivers/gpio/: gpio-pca953x.c
drivers/gpu/: Makefile
drivers/hid/: hid-ids.h  hid-quirks.c
drivers/hwmon/: Kconfig  Makefile  am335x-bandgap.c  hwmon.c  pwm-fan.c  tps6518x-hwmon.c
drivers/iio/: Kconfig  Makefile  industrialio-core.c  industrialio-inputbridge.c  industrialio-inputbridge.h
drivers/input/: Kconfig  touchscreen.c
drivers/irqchip/: Kconfig  Makefile  irq-ingenic-cpu.c  irq-ingenic-tcu.c  irq-ingenic.c
drivers/mfd/: Kconfig  Makefile  tps6518x.c  twl4030-power.c
drivers/misc/: Kconfig  Makefile  trs3386.c  w2cbw003-bluetooth.c  wwan-on-off.c
drivers/of/: device.c
drivers/pinctrl/: pinctrl-ingenic.c
drivers/power/: Kconfig
drivers/pwm/: Kconfig  Makefile  pwm-gpio.c  pwm-jz4730.c
drivers/regulator/: Kconfig  Makefile  tps6105x-regulator.c  tps6518x-regulator.c  twl-regulator.c
drivers/spi/: spi-ingenic.c
drivers/staging/: Kconfig  Makefile
drivers/thermal/: thermal_of.c
drivers/video/: Kconfig
drivers/watchdog/: Kconfig  Makefile  jz4740_wdt.c  palmas_wdt.c
fs/ubifs/: super.c
gfxsdkdemos/: gfxinstallinfo.txt
include/drm/: drm_bridge.h  drm_mipi_dbi.h
include/linux/: cyttsp5_core.h  cyttsp5_platform.h  netdevice.h  power_supply.h  wwan-on-off.h
include/sound/: pcm.h  simple_card_utils.h  soc-dpcm.h
include/video/: omapfb_dss.h
init/: Kconfig
kernel/irq/: pm.c
mm/: vmalloc.c
net/bluetooth/: hci_event.c
scripts/: Makefile.dtbinst  Makefile.lib  cc-version.sh  check-local-export  min-tool-version.sh  sorttable.c
scripts/dtc/: Makefile  doc2yaml  template.yaml
scripts/mod/: file2alias.c  modpost.c
sound/core/: pcm_lib.c
sound/soc/: soc-dai.c  soc-generic-dmaengine-pcm.c  soc-pcm.c
sound/soc/ti/aess/firmware/abefw/: Makefile.am  README  autogen.sh  configure.ac
sound/soc/ti/aess/firmware/abefw/fw/: Makefile.am  fw.c
sound/soc/ti/aess/firmware/abefw/fw/009530/: abe_firmware.c
sound/soc/ti/aess/firmware/abefw/fw/009560/: abe_firmware.c
sound/soc/ti/aess/firmware/abefw/fw/009590/: abe_firmware.c
sound/soc/ti/aess/firmware/abefw/include/: Makefile.am
sound/soc/ti/aess/firmware/abefw/include/009590/: abe_cm_addr.h  abe_cm_linux.h  abe_define.h  abe_dm_addr.h  abe_dm_linux.h  abe_functionsid.h  abe_initxxx_labels.h  abe_sm_addr.h  abe_sm_linux.h  abe_taskid.h
sound/soc/ti/aess/firmware/abefw/scripts/: abe-tool.sh
sound/soc/ti/aess/firmware/abefw/src/: Makefile.am  abe_asrc.c  abegen.c  abegen.h
sound/soc/ti/aess/firmware/abefw/tasks/: Makefile.am  abe-local.h  abe.c
sound/soc/ti/aess/firmware/abefw/tasks/009590/: abe_addr.c  abe_asrc.c
sound/soc/ti/aess/firmware/asoc-fw/: COPYING  Makefile.am  README  configure.ac
sound/soc/ti/aess/firmware/asoc-fw/plugins/: Makefile.am
sound/soc/ti/aess/firmware/asoc-fw/plugins/omap4plus/: Makefile.am
sound/soc/ti/aess/firmware/asoc-fw/plugins/omap4plus/coeffs/: Makefile.am  amic.c  dl1.c  dl2l.c  dl2r.c  dmic.c  sdt.c
sound/soc/ti/aess/firmware/asoc-fw/plugins/omap4plus/dapm/: Makefile.am  abe-dl1dl2-twl6040.c
sound/soc/ti/aess/firmware/asoc-fw/scripts/: abegen.sh
sound/soc/ti/aess/firmware/asoc-fw/src/: Makefile.am  lib.c  socfw.c  socfw.h
sound/soc/ti/aess/firmware/asoc-fw/src/linux/: list.h  nospec.h
sound/soc/ti/aess/firmware/asoc-fw/src/sound/: control.h  soc-dapm.h  soc-topology.h  soc.h
(+1829 files in other folders)
