

AM_CFLAGS = \
	-I$(top_srcdir)/src

AM_LDFLAGS = $(NODELETE_LDFLAGS)

MODULE_LDFLAGS = $(AM_LDFLAGS) -module -disable-static -avoid-version $(LDFLAGS_NOUNDEFINED)

OMAP4CFLAGS = -I $(HAL_DIR) -I $(LINUX_DIR) -Werror -Wall

abe009590dir = $(libdir)/abe/
abe009590_LTLIBRARIES = abe009590.la
abe009590_la_SOURCES = abe.c
abe009590_la_LDFLAGS = $(MODULE_LDFLAGS)
abe009590_la_LIBADD = $(MODULE_LIBADD)
abe009590_la_CFLAGS = $(AM_CFLAGS) $(OMAP4CFLAGS) -I 009590

